--- a/hacking/firewall.html
+++ b/hacking/firewall.html
@@ -46,17 +46,17 @@
                     <img src="media/forti1.avif" alt="">
                 </div>
                 <h2>Alcance del Firewall Fortinet</h2>
-                <ol>
-                    <li><marcador class="resaltado2">Filtrado de Paquetes: </marcador>Filtrado básico y avanzado de tráfico entrante y saliente basado en IPs, puertos y protocolos.</li>
-                    <li><marcador class="resaltado2">Inspección Profunda de Paquetes (DPI): </marcador>Analiza el contenido de los paquetes de red para detectar y bloquear ataques avanzados que intentan ocultarse como tráfico legítimo.</li>
-                    <li><marcador class="resaltado2">Prevención de Intrusiones (IPS): </marcador>Detecta y previene intentos de explotación de vulnerabilidades en tiempo real, basándose en firmas de ataques conocidas y análisis de comportamiento.</li>
-                    <li><marcador class="resaltado2">Control de Aplicaciones: </marcador>Permite identificar y controlar el tráfico de aplicaciones específicas, como aplicaciones en la nube, redes sociales o aplicaciones P2P.</li>
-                    <li><marcador class="resaltado2">Protección contra Malware: </marcador>Detección y bloqueo de malware antes de que pueda entrar en la red, mediante análisis en tiempo real.</li>
-                    <li><marcador class="resaltado2">VPN (Virtual Private Network): </marcador>Soporte tanto para VPN basadas en IPsec como en SSL, proporcionando conectividad segura y cifrada para usuarios remotos.</li>
-                    <li><marcador class="resaltado2">Firewall de Aplicaciones Web (WAF): </marcador>Protege las aplicaciones web contra ataques comunes como inyecciones SQL, cross-site scripting (XSS) y otras vulnerabilidades de aplicaciones web.</li>
-                    <li><marcador class="resaltado2">DLP (Data Loss Prevention): </marcador>Evita la fuga de datos sensibles mediante la supervisión y control de la transferencia de información crítica.</li>
-                    <li><marcador class="resaltado2">Seguridad en la Nube: </marcador>Integración con plataformas en la nube para asegurar tanto entornos locales como híbridos y multicloud.</li>
-                    <li><marcador class="resaltado2">Gestión Centralizada: </marcador>Con FortiManager, las organizaciones pueden gestionar múltiples dispositivos FortiGate desde un único punto de control.</li>
+                <ol style="list-style-type: none;">
+                    <li>🖥️ <marcador class="resaltado2">Filtrado de Paquetes: </marcador>Filtrado básico y avanzado de tráfico entrante y saliente basado en IPs, puertos y protocolos.</li>
+                    <li>🖥️ <marcador class="resaltado2">Inspección Profunda de Paquetes (DPI): </marcador>Analiza el contenido de los paquetes de red para detectar y bloquear ataques avanzados que intentan ocultarse como tráfico legítimo.</li>
+                    <li>🖥️ <marcador class="resaltado2">Prevención de Intrusiones (IPS): </marcador>Detecta y previene intentos de explotación de vulnerabilidades en tiempo real, basándose en firmas de ataques conocidas y análisis de comportamiento.</li>
+                    <li>🖥️ <marcador class="resaltado2">Control de Aplicaciones: </marcador>Permite identificar y controlar el tráfico de aplicaciones específicas, como aplicaciones en la nube, redes sociales o aplicaciones P2P.</li>
+                    <li>🖥️ <marcador class="resaltado2">Protección contra Malware: </marcador>Detección y bloqueo de malware antes de que pueda entrar en la red, mediante análisis en tiempo real.</li>
+                    <li>🖥️ <marcador class="resaltado2">VPN (Virtual Private Network): </marcador>Soporte tanto para VPN basadas en IPsec como en SSL, proporcionando conectividad segura y cifrada para usuarios remotos.</li>
+                    <li>🖥️ <marcador class="resaltado2">Firewall de Aplicaciones Web (WAF): </marcador>Protege las aplicaciones web contra ataques comunes como inyecciones SQL, cross-site scripting (XSS) y otras vulnerabilidades de aplicaciones web.</li>
+                    <li>🖥️ <marcador class="resaltado2">DLP (Data Loss Prevention): </marcador>Evita la fuga de datos sensibles mediante la supervisión y control de la transferencia de información crítica.</li>
+                    <li>🖥️ <marcador class="resaltado2">Seguridad en la Nube: </marcador>Integración con plataformas en la nube para asegurar tanto entornos locales como híbridos y multicloud.</li>
+                    <li>🖥️ <marcador class="resaltado2">Gestión Centralizada: </marcador>Con FortiManager, las organizaciones pueden gestionar múltiples dispositivos FortiGate desde un único punto de control.</li>
                 </ol>
                 <h2>Métodos de Conexión y Configuración</h2>
                 <p>Existen varios métodos para conectarse y configurar un firewall Fortinet (FortiGate):</p>
@@ -80,7 +80,7 @@
                 </div>
                 <h2>Objetos</h2>
                 <p>En Fortinet, los objetos son componentes clave que se utilizan para crear políticas, reglas y configuraciones dentro del sistema. Los objetos representan elementos específicos de la red, tales como direcciones IP, servicios (como puertos o protocolos), usuarios, interfaces de red o direcciones virtuales, y ayudan a simplificar la administración de la seguridad y el tráfico de red. Al definir objetos, puedes reutilizarlos en diferentes políticas y configuraciones, lo que facilita la gestión y el mantenimiento de las políticas de seguridad en tu red.</p>
-                <ol>
+                <ol style="list-style-type: lower-alpha;">
                     <li><marcador class="resaltado2">Objetos de Dirección (Address Objects): </marcador>Representan direcciones IP individuales, rangos de IP o subredes. Estos objetos se utilizan para especificar las fuentes y destinos en las reglas de firewall o en las políticas de NAT. Por ejemplo, podrías crear un objeto para una dirección IP de un servidor interno y luego usarlo en diferentes políticas.</li>
                     <h6>Ejemplo de dirección IP estática:</h6>
                     <div class="consola">
