--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -62,38 +62,38 @@
                 <br>
                 <ul>
                   <li><marcador class="resaltado9">Tipo de licencia:</marcador></li>
-                    <ul>
-                      <li><marcador class="resaltado6">Linux:</marcador> Es un sistema operativo de código abierto, lo que significa que su código fuente es accesible para todos, y se puede modificar, distribuir y utilizar libremente.</li>
-                      <li><marcador class="resaltado6">Windows:</marcador> Es un sistema operativo propietario desarrollado por Microsoft. Los usuarios deben adquirir una licencia para utilizarlo, y el código fuente no es accesible públicamente.</li>
-                      <li><marcador class="resaltado6">macOS:</marcador> Es también un sistema operativo propietario desarrollado por Apple y está diseñado para funcionar exclusivamente en hardware de Apple.</li>
+                    <ul style="list-style-type: none;">
+                      <li>✖ <marcador class="resaltado6">Linux:</marcador> Es un sistema operativo de código abierto, lo que significa que su código fuente es accesible para todos, y se puede modificar, distribuir y utilizar libremente.</li>
+                      <li>✖ <marcador class="resaltado6">Windows:</marcador> Es un sistema operativo propietario desarrollado por Microsoft. Los usuarios deben adquirir una licencia para utilizarlo, y el código fuente no es accesible públicamente.</li>
+                      <li>✖ <marcador class="resaltado6">macOS:</marcador> Es también un sistema operativo propietario desarrollado por Apple y está diseñado para funcionar exclusivamente en hardware de Apple.</li>
                     </ul>
                 <br>    
                   <li><marcador class="resaltado9">Interfaz de usuario:</marcador></li>
-                    <ul>
-                      <li><marcador class="resaltado6">Linux:</marcador> Existen diversas interfaces gráficas en las diferentes distribuciones de Linux, como GNOME, KDE, Xfce, entre otras. Los usuarios pueden elegir la que mejor se adapte a sus preferencias.</li>
-                      <li><marcador class="resaltado6">Windows:</marcador> Tiene una interfaz de usuario coherente a lo largo de las versiones, con el menú Inicio y la barra de tareas como elementos característicos.</li>
-                      <li><marcador class="resaltado6">macOS:</marcador> Se destaca por su diseño elegante y su enfoque en la usabilidad, con la barra de menús en la parte superior de la pantalla y el dock para acceder a aplicaciones frecuentes.</li>
+                    <ul style="list-style-type: none;">
+                      <li>✖ <marcador class="resaltado6">Linux:</marcador> Existen diversas interfaces gráficas en las diferentes distribuciones de Linux, como GNOME, KDE, Xfce, entre otras. Los usuarios pueden elegir la que mejor se adapte a sus preferencias.</li>
+                      <li>✖ <marcador class="resaltado6">Windows:</marcador> Tiene una interfaz de usuario coherente a lo largo de las versiones, con el menú Inicio y la barra de tareas como elementos característicos.</li>
+                      <li>✖ <marcador class="resaltado6">macOS:</marcador> Se destaca por su diseño elegante y su enfoque en la usabilidad, con la barra de menús en la parte superior de la pantalla y el dock para acceder a aplicaciones frecuentes.</li>
                     </ul>
                 <br>    
                   <li><marcador class="resaltado9">Disponibilidad de software:</marcador></li>
-                    <ul>  
-                      <li><marcador class="resaltado6">Linux:</marcador> Cuenta con una amplia selección de software gratuito y de código abierto disponible en los repositorios oficiales de las distribuciones, lo que facilita la instalación y actualización de programas.</li>
-                      <li><marcador class="resaltado6">Windows:</marcador> Ofrece una gran cantidad de software comercial y gratuito, con una amplia gama de aplicaciones y juegos disponibles. La tienda de aplicaciones de Microsoft también proporciona acceso a una variedad de software.</li>
-                      <li><marcador class="resaltado6">macOS:</marcador> Dispone de una tienda de aplicaciones oficial llamada App Store y también admite la instalación de software desde otras fuentes.</li>
+                    <ul style="list-style-type: none;">  
+                      <li>✖ <marcador class="resaltado6">Linux:</marcador> Cuenta con una amplia selección de software gratuito y de código abierto disponible en los repositorios oficiales de las distribuciones, lo que facilita la instalación y actualización de programas.</li>
+                      <li>✖ <marcador class="resaltado6">Windows:</marcador> Ofrece una gran cantidad de software comercial y gratuito, con una amplia gama de aplicaciones y juegos disponibles. La tienda de aplicaciones de Microsoft también proporciona acceso a una variedad de software.</li>
+                      <li>✖ <marcador class="resaltado6">macOS:</marcador> Dispone de una tienda de aplicaciones oficial llamada App Store y también admite la instalación de software desde otras fuentes.</li>
                     </ul>
                 <br>
                   <li><marcador class="resaltado9">Compatibilidad de hardware:</marcador></li>
-                    <ul>
-                      <li><marcador class="resaltado6">Linux:</marcador> Ha mejorado significativamente en términos de compatibilidad de hardware, pero aún puede haber problemas con ciertos componentes más nuevos o especializados.</li>
-                      <li><marcador class="resaltado6">Windows:</marcador> Es conocido por su amplia compatibilidad con hardware, ya que muchos fabricantes de hardware desarrollan controladores específicamente para Windows.</li>
-                      <li><marcador class="resaltado6">macOS:</marcador> Funciona exclusivamente en hardware de Apple, lo que garantiza una alta integración y compatibilidad con sus dispositivos.</li>
+                    <ul style="list-style-type: none;">
+                      <li>✖ <marcador class="resaltado6">Linux:</marcador> Ha mejorado significativamente en términos de compatibilidad de hardware, pero aún puede haber problemas con ciertos componentes más nuevos o especializados.</li>
+                      <li>✖ <marcador class="resaltado6">Windows:</marcador> Es conocido por su amplia compatibilidad con hardware, ya que muchos fabricantes de hardware desarrollan controladores específicamente para Windows.</li>
+                      <li>✖ <marcador class="resaltado6">macOS:</marcador> Funciona exclusivamente en hardware de Apple, lo que garantiza una alta integración y compatibilidad con sus dispositivos.</li>
                     </ul>
                 <br>
                   <li><marcador class="resaltado9">Uso en servidores y dispositivos móviles:</marcador></li>
-                    <ul>
-                      <li><marcador class="resaltado6">Linux:</marcador> Es ampliamente utilizado en servidores debido a su estabilidad, seguridad y capacidad de personalización. Además, Android, un sistema operativo móvil basado en Linux, es el más popular en dispositivos móviles.</li>
-                      <li><marcador class="resaltado6">Windows:</marcador> También se utiliza en servidores, especialmente en entornos corporativos, pero Linux es más dominante en este ámbito. Windows Phone fue el intento de Microsoft de entrar en el mercado de dispositivos móviles, pero no logró una gran cuota de mercado.</li>
-                      <li><marcador class="resaltado6">macOS:</marcador> Aunque no es comúnmente utilizado en servidores, macOS es popular en el ámbito creativo y educativo, y es el sistema operativo predeterminado en las computadoras Mac de Apple.</li>
+                    <ul style="list-style-type: none;">
+                      <li>✖ <marcador class="resaltado6">Linux:</marcador> Es ampliamente utilizado en servidores debido a su estabilidad, seguridad y capacidad de personalización. Además, Android, un sistema operativo móvil basado en Linux, es el más popular en dispositivos móviles.</li>
+                      <li>✖ <marcador class="resaltado6">Windows:</marcador> También se utiliza en servidores, especialmente en entornos corporativos, pero Linux es más dominante en este ámbito. Windows Phone fue el intento de Microsoft de entrar en el mercado de dispositivos móviles, pero no logró una gran cuota de mercado.</li>
+                      <li>✖ <marcador class="resaltado6">macOS:</marcador> Aunque no es comúnmente utilizado en servidores, macOS es popular en el ámbito creativo y educativo, y es el sistema operativo predeterminado en las computadoras Mac de Apple.</li>
                     </ul>
                 </ul>
                 <div class="blog-image-doble">
@@ -643,26 +643,26 @@
                 <h2>Permisos</h2>  
                 <p>Existen tres roles dentro de Linux que son útiles para poder administrar el sistema y los archivos que se encuentran dentro, tales como son:</p>
                   <li><marcador class="resaltado9">Root (Superusuario):</marcador></li>
-                    <ul>
-                      <li>En Linux, "root" es el usuario con el máximo nivel de privilegios en el sistema, también conocido como el superusuario.</li>
-                      <li>El usuario "root" tiene control total sobre el sistema y puede acceder, modificar y eliminar cualquier archivo, directorio o configuración, así como instalar y desinstalar programas.</li>
-                      <li>Debido a su amplio alcance, se debe usar con precaución, ya que los cambios realizados por "root" pueden afectar negativamente al sistema si se hacen de manera incorrecta.</li>
-                      <li>Las tareas administrativas críticas, como la instalación de software o la configuración del sistema, a menudo requieren permisos de "root".</li>
+                    <ul style="list-style-type: none;">
+                      <li>∘ En Linux, "root" es el usuario con el máximo nivel de privilegios en el sistema, también conocido como el superusuario.</li>
+                      <li>∘ El usuario "root" tiene control total sobre el sistema y puede acceder, modificar y eliminar cualquier archivo, directorio o configuración, así como instalar y desinstalar programas.</li>
+                      <li>∘ Debido a su amplio alcance, se debe usar con precaución, ya que los cambios realizados por "root" pueden afectar negativamente al sistema si se hacen de manera incorrecta.</li>
+                      <li>∘ Las tareas administrativas críticas, como la instalación de software o la configuración del sistema, a menudo requieren permisos de "root".</li>
                     </ul>
                   <li><marcador class="resaltado9">Grupo:</marcador></li>
-                    <ul>
-                      <li>En Linux, los usuarios pueden agruparse en categorías llamadas grupos para facilitar la gestión de permisos y accesos.</li>
-                      <li>Los grupos permiten que varios usuarios tengan los mismos permisos en ciertos archivos y directorios, lo que simplifica la administración de permisos para conjuntos de usuarios relacionados.</li>
-                      <li>Por ejemplo, si un archivo necesita ser accesible para un equipo de desarrollo, el administrador puede crear un grupo llamado "desarrollo" y agregar a todos los miembros del equipo a ese grupo.</li>
-                      <li>Luego, se pueden configurar los permisos de ese archivo para que solo los miembros del grupo "desarrollo" tengan acceso a él.</li>
+                    <ul style="list-style-type: none;">
+                      <li>∘ En Linux, los usuarios pueden agruparse en categorías llamadas grupos para facilitar la gestión de permisos y accesos.</li>
+                      <li>∘ Los grupos permiten que varios usuarios tengan los mismos permisos en ciertos archivos y directorios, lo que simplifica la administración de permisos para conjuntos de usuarios relacionados.</li>
+                      <li>∘ Por ejemplo, si un archivo necesita ser accesible para un equipo de desarrollo, el administrador puede crear un grupo llamado "desarrollo" y agregar a todos los miembros del equipo a ese grupo.</li>
+                      <li>∘ Luego, se pueden configurar los permisos de ese archivo para que solo los miembros del grupo "desarrollo" tengan acceso a él.</li>
                     </ul>
                   <li><marcador class="resaltado9">Usuario:</marcador></li>
-                    <ul>
-                      <li>Los usuarios en Linux son cuentas individuales que utilizan el sistema operativo.</li>
-                      <li>Cada usuario tiene su propio espacio de trabajo, directorio de inicio, configuraciones y permisos de acceso a archivos y directorios.</li>
-                      <li>Cuando un usuario inicia sesión en el sistema, se identifica mediante un nombre de usuario (username) y una contraseña (password) únicos.</li>
-                      <li>Los usuarios no tienen permisos de administrador predeterminados, lo que significa que no pueden realizar cambios críticos en el sistema sin proporcionar credenciales de "root".</li>
-                      <li>Los usuarios pueden pertenecer a uno o varios grupos, lo que les otorga permisos adicionales en archivos y directorios compartidos con esos grupos.</li>
+                    <ul style="list-style-type: none;">
+                      <li>∘ Los usuarios en Linux son cuentas individuales que utilizan el sistema operativo.</li>
+                      <li>∘ Cada usuario tiene su propio espacio de trabajo, directorio de inicio, configuraciones y permisos de acceso a archivos y directorios.</li>
+                      <li>∘ Cuando un usuario inicia sesión en el sistema, se identifica mediante un nombre de usuario (username) y una contraseña (password) únicos.</li>
+                      <li>∘ Los usuarios no tienen permisos de administrador predeterminados, lo que significa que no pueden realizar cambios críticos en el sistema sin proporcionar credenciales de "root".</li>
+                      <li>∘ Los usuarios pueden pertenecer a uno o varios grupos, lo que les otorga permisos adicionales en archivos y directorios compartidos con esos grupos.</li>
                     </ul>
                 </ul>
                 <br>
@@ -682,10 +682,10 @@
                 <br>
                 <ul>
                   <li><marcador class="resaltado6">Notación numérica:</marcador></li>
-                    <ul>
-                      <li>4: Lectura (r)</li>
-                      <li>2: Escritura (w)</li>
-                      <li>1: Ejecución (x)</li>
+                    <ul style="list-style-type: none;">
+                      <li>⋆ 4: Lectura (r)</li>
+                      <li>⋆ 2: Escritura (w)</li>
+                      <li>⋆ 1: Ejecución (x)</li>
                     </ul>
 
                     <div class="contenedor">
@@ -710,11 +710,11 @@
                   <br>
                   <br>
                   <li><marcador class="resaltado6">Notación alfabética:</marcador></li>
-                    <ul>
-                      <li>u: Usuario (propietario)</li>
-                      <li>g: Grupo</li>
-                      <li>o: Otros (usuarios que no son el propietario ni están en el grupo)</li>
-                      <li>a: Todos (equivalente a ugo)</li>
+                    <ul style="list-style-type: none;">
+                      <li>⋆ u: Usuario (propietario)</li>
+                      <li>⋆ g: Grupo</li>
+                      <li>⋆ o: Otros (usuarios que no son el propietario ni están en el grupo)</li>
+                      <li>⋆ a: Todos (equivalente a ugo)</li>
                     </ul>
 
                     <div class="contenedor">
@@ -739,10 +739,10 @@
                   <br>
                   <br>
                   <li><marcador class="resaltado6">Opciones adicionales:</marcador></li>
-                    <ul>
-                      <li>'+': Añadir permiso.</li>
-                      <li>'-': Quitar permiso.</li>
-                      <li>'=': Establecer los permisos exactamente como se especifiquen, eliminando los permisos previos.</li>
+                    <ul style="list-style-type: none;">
+                      <li>⋆ '+': Añadir permiso.</li>
+                      <li>⋆ '-': Quitar permiso.</li>
+                      <li>⋆ '=': Establecer los permisos exactamente como se especifiquen, eliminando los permisos previos.</li>
                     </ul>
                 </ol>
 
