--- a/hacking/expresiones.html
+++ b/hacking/expresiones.html
@@ -481,8 +481,8 @@
                 <br>
                 <br>
                 <h2>'>' y '>>' - Redireccionamiento de Salida</h2>
-                <ul>
-                    <li>Redireccionar la salida estándar a un archivo (sobrescribir o crear)</li>
+                <ul style="list-style-type: none;">
+                    <li>⋆ Redireccionar la salida estándar a un archivo (sobrescribir o crear)</li>
                 </ul>
                 <br>
                 <div class="contenedor">
@@ -504,8 +504,8 @@
                     </div>
                 </div>
                 <br>
-                <ul>
-                    <li>Anexar la salida estándar a un archivo</li>
+                <ul style="list-style-type: none;">
+                    <li>⋆ Anexar la salida estándar a un archivo</li>
                 </ul>
                 <br>
                 <div class="contenedor">
